--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Clipboard landing page</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" media="screen" href="queries.css" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css?family=Karla:400,700&display=swap"
       rel="stylesheet"
@@ -43,6 +44,14 @@
           </ul>
         </div>
       </div>
+      <footer>
+        <p class="attribution">
+          Challenge by
+          <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+            >Frontend Mentor</a
+          >. Coded by <a href="#">Youssef Medmourh</a>.
+        </p>
+      </footer>
     </div>
   </body>
 </html>
